# venvtool

./: .gitignore  CMakeLists.txt  install.ps1  install.sh  readme.md
include/: cxxopts.hpp  venvtool.hpp
scripts/: venvtool.ps1  venvtool.sh
src/: main.cpp  venvtool.cpp
